# ai-safety-incidents

./: .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2025-04-26-191207_create_incidents/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
